[project]
name = "wiretransmit"
version = "0.2.0"
description = "File transfer over 3.5mm audio cable via FSK/4FSK modulation"
authors = [
    { name = "Frostlock Zhou" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "sounddevice>=0.4.0",
]

[project.scripts]
wiretransmit-send = "send:main"
wiretransmit-recv = "receive:main"
